--- a/.gitignore
+++ b/.gitignore
@@ -507,3 +507,107 @@ logs/
 05-batch/code/fhvhv_tripdata_2021-01.csv.gz
 05-batch/code/head.csv
 05-batch/code/taxi+_zone_lookup.csv
+05-batch/code/tmp/revenue-zones/_SUCCESS
+05-batch/code/tmp/revenue-zones/._SUCCESS.crc
+05-batch/code/tmp/revenue-zones/.part-00000-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet.crc
+05-batch/code/tmp/revenue-zones/.part-00001-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet.crc
+05-batch/code/tmp/revenue-zones/.part-00002-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet.crc
+05-batch/code/tmp/revenue-zones/.part-00003-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet.crc
+05-batch/code/tmp/revenue-zones/part-00000-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet
+05-batch/code/tmp/revenue-zones/part-00001-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet
+05-batch/code/tmp/revenue-zones/part-00002-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet
+05-batch/code/tmp/revenue-zones/part-00003-ba3d77f5-e1cd-4ebf-816a-4c9d58903f79-c000.snappy.parquet
+05-batch/data/report/revenue/green/_SUCCESS
+05-batch/data/report/revenue/green/._SUCCESS.crc
+05-batch/data/report/revenue/green/.part-00000-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00001-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00002-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00003-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00004-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00005-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00006-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00007-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00008-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00009-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00010-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00011-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00012-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00013-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00014-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00015-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00016-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00017-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00018-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/.part-00019-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet.crc
+05-batch/data/report/revenue/green/part-00000-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00001-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00002-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00003-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00004-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00005-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00006-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00007-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00008-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00009-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00010-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00011-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00012-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00013-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00014-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00015-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00016-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00017-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00018-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/green/part-00019-75e68b59-fb15-480c-8b94-0cbc17222c41-c000.snappy.parquet
+05-batch/data/report/revenue/total/_SUCCESS
+05-batch/data/report/revenue/total/._SUCCESS.crc
+05-batch/data/report/revenue/total/.part-00000-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet.crc
+05-batch/data/report/revenue/total/.part-00001-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet.crc
+05-batch/data/report/revenue/total/.part-00002-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet.crc
+05-batch/data/report/revenue/total/.part-00003-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet.crc
+05-batch/data/report/revenue/total/part-00000-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet
+05-batch/data/report/revenue/total/part-00001-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet
+05-batch/data/report/revenue/total/part-00002-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet
+05-batch/data/report/revenue/total/part-00003-373697dc-58a7-4bc9-886a-a91527549a27-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/_SUCCESS
+05-batch/data/report/revenue/yellow/._SUCCESS.crc
+05-batch/data/report/revenue/yellow/.part-00000-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00001-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00002-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00003-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00004-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00005-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00006-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00007-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00008-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00009-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00010-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00011-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00012-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00013-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00014-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00015-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00016-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00017-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00018-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/.part-00019-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet.crc
+05-batch/data/report/revenue/yellow/part-00000-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00001-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00002-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00003-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00004-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00005-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00006-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00007-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00008-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00009-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00010-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00011-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00012-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00013-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00014-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00015-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00016-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00017-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00018-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
+05-batch/data/report/revenue/yellow/part-00019-d8012ac3-dba0-48dc-acc6-25023deb19d4-c000.snappy.parquet
